# devx-tools

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.gousb  CONTRIBUTING.md  README.md  WORKSPACE
.continuous_integration/: postsubmit.yml
.github/workflows/: main.yml
kokoro/: build.sh  continuous.cfg
kombi/net/qemu/: BUILD  qemu.go  qemu_test.go  test_server.go
kombi/stream/: BUILD  tar.go
kombi/utils/: BUILD  net.go
patches/: BUILD  vsock.patch
waterfall/: BUILD  README.md  constants.go  stream.go  stream_test.go  tar.go  tar_test.go
waterfall/adb/: BUILD  adb.go
waterfall/bootstrap/: BUILD  bootstrap.go  bootstrap_bin.go  bootstrap_test.go
waterfall/client/: BUILD  client.go
waterfall/client/adb/: BUILD  adb_bin.go
waterfall/forward/: BUILD  bootstrap.go  bootstrap_test.go  forward.go  forward_bin.go  forward_test.go  stream.go  stream_test.go
waterfall/forward/ports/: BUILD  ports.go  ports_bin.go  ports_test.go
waterfall/golang/adb/: BUILD.bazel  adb.go
waterfall/golang/aoa/: BUILD  BUILD.bazel  aoa.go  aoa_test.go  aoa_utils_bin.go
waterfall/golang/bootstrap/: BUILD  BUILD.bazel  bootstrap.go  bootstrap_bin.go  bootstrap_test.go  bootstrap_usb_bin.go
waterfall/golang/client/: BUILD.bazel  client.go
waterfall/golang/client/adb/: BUILD  BUILD.bazel  adb.go  adb_bin.go  adb_darwin.go  adb_linux.go
waterfall/golang/constants/: BUILD.bazel  constants.go
waterfall/golang/forkfd/: BUILD  BUILD.bazel  forkfd.go
waterfall/golang/forward/: BUILD  BUILD.bazel  forward_bin.go  forward_test.go  forward_usb_bin.go  stream.go  stream_test.go
waterfall/golang/forward/ports/: BUILD.bazel  ports.go  ports_bin.go  ports_test.go
waterfall/golang/mux/: BUILD.bazel  addr.go  conn.go  message.go  mux.go  mux_test.go
waterfall/golang/net/qemu/: BUILD  BUILD.bazel  control.go  qemu.go  qemu_test.go  test_server.go
waterfall/golang/registry/: BUILD  registry.go  registry_bin.go
waterfall/golang/server/: BUILD  BUILD.bazel  auth_interceptor.go  provider.go  server.go  server_bin.go  snapshot.go
waterfall/golang/server/testing/: BUILD  BUILD.bazel  qemu_server_test.go
waterfall/golang/stream/: BUILD  BUILD.bazel  stream.go  stream_test.go  tar.go  tar_test.go
waterfall/golang/testutils/: BUILD  BUILD.bazel  emu.go  net.go  runfiles.go
waterfall/golang/utils/: BUILD.bazel  addr.go  addr_test.go
waterfall/java/com/google/waterfall/client/: BUILD.bazel  StaticWaterfallClient.java  WaterfallClient.java
waterfall/java/com/google/waterfall/tar/: BUILD.bazel  Tar.java
waterfall/java/com/google/waterfall/usb/: AndroidManifest.xml  AndroidUsbModule.java  AoaUsbAccessory.java  AoaUsbManager.java  BUILD  BUILD.bazel  ForService.java  MockUsbAccessory.java  MockUsbManager.java  UsbAccessoryIntf.java  UsbActivity.java  UsbManagerIntf.java  UsbService.java
waterfall/java/com/google/waterfall/usb/res/res/values/: id.xml
waterfall/java/com/google/waterfall/usb/res/values/: strings.xml
waterfall/java/com/google/waterfall/usb/res/xml/: accessory_filter.xml
waterfall/javatests/com/google/waterfall/client/: BUILD.bazel  TestServiceBuilders.java  WaterfallClientTest.java
waterfall/javatests/com/google/waterfall/helpers/: BUILD.bazel  FileTestHelper.java
waterfall/javatests/com/google/waterfall/tar/: BUILD.bazel  TarTest.java
waterfall/javatests/com/google/waterfall/usb/: AndroidManifest.xml  BUILD  BUILD.bazel  UsbServiceTest.java
waterfall/net/qemu/: BUILD  qemu.go  qemu_test.go  test_server.go
waterfall/prebuilt/arm/: BUILD
waterfall/prebuilt/arm64/: BUILD
waterfall/proto/: BUILD  BUILD.bazel  control_socket.proto  waterfall.proto
waterfall/registry/: BUILD  registry.go  registry_bin.go
waterfall/server/: BUILD  server.go  server_bin.go
waterfall/server/testing/: BUILD  qemu_server_test.go  qemu_test_client.go
waterfall/stream/: BUILD  tar.go  tar_test.go
waterfall/test_utils/: BUILD  emu.go  net.go
waterfall/testutils/: BUILD  emu.go  net.go  runfiles.go
waterfall/utils/: BUILD
