licenses(["notice"])  # Apache 2.0

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

package(default_visibility = ["//visibility:public"])

# In order to build this target libusb needs to be installed.
go_library(
    name = "aoa",
    srcs = ["aoa.go"],
    importpath = "github.com/google/waterfall/golang/aoa",
    deps = ["@com_github_google_gousb//:go_default_library"],
)

go_test(
    name = "aoa_test",
    srcs = ["aoa_test.go"],
    data = [
        "//waterfall/java/com/google/waterfall/usb:usb_service",
    ],
    embed = [
        ":aoa",
    ],
    importpath = "github.com/google/waterfall/golang/aoa",
    deps = [
        "@org_golang_x_sync//errgroup",
    ],
)
