# Description:
#   Package client is a reference waterfall client implementation

licenses(["notice"])  # Apache 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/google/waterfall/golang/client",
    deps = [
        "//waterfall/golang/stream",
        "//waterfall/proto:waterfall_go_grpc",
        "@org_golang_x_sync//errgroup",
    ],
)
