licenses(["notice"])  # Apache 2.0

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
)

package(default_visibility = ["//visibility:public"])

go_library(
    name = "constants",
    srcs = [
        "constants.go",
    ],
    importpath = "github.com/google/waterfall/golang/constants",
)
