licenses(["notice"])  # Apache 2.0

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "forkfd",
    embed = [":forkfd_lib"],
)

go_library(
    name = "forkfd_lib",
    srcs = ["forkfd.go"],
    importpath = "github.com/google/waterfall/golang/forkfd",
)
