licenses(["notice"])  # Apache 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "testutils",
    srcs = [
        "emu.go",
        "net.go",
        "runfiles.go",
    ],
    importpath = "github.com/google/waterfall/golang/testutils",
)
