# Description:
#  ADB command line compatible implementation of waterfall

licenses(["notice"])  # Apache 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "adb_bin",
    srcs = ["adb_bin.go"],
    deps = [
        ":adb",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_library(
    name = "adb",
    srcs = [
        "adb.go",
        "adb_darwin.go",
        "adb_linux.go",
    ],
    importpath = "github.com/google/waterfall/golang/client/adb",
    deps = [
        "//waterfall/golang/client",
        "//waterfall/proto:waterfall_go_grpc",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
