# Description:
#   Tar is a utility library to tar and untar streams

licenses(["notice"])  # Apache License 2.0

load("@rules_maven//:defs.bzl", "artifact")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "tar",
    srcs = [
        "Tar.java",
    ],
    deps = [
        "@maven//:org_apache_commons_commons_compress",
        "@com_google_guava_guava//jar",
    ],
)
