# Description:
#   Tar is a utility library to tar and untar streams

licenses(["notice"])  # Apache License 2.0

package(default_visibility = ["//visibility:public"])

java_library(
    name = "tar",
    srcs = [
        "Tar.java",
    ],
    deps = [
        "@com_google_guava_guava//jar",
        "@maven//:org_apache_commons_commons_compress",
    ],
)
